# wwsearch

./: AUTHORS  CMakeLists.txt  Contributing.md  LICENSE.TXT  README.md  build.sh  format.sh
benchmark/: CMakeLists.txt  Makefile  bench_db.cpp  bench_db.h  bench_index.cpp  bench_index.h  bench_merge.cpp  bench_merge.h  bench_random.cpp  bench_random.h  main.cpp  random_creater.h  scheme
doc/: wwsearch-implement.md
example/: example.cpp
include/: and_query.h  and_scorer.h  and_weight.h  bool_query.h  bool_scorer.h  bool_weight.h  checked.h  codec.h  codec_doclist.h  codec_doclist_impl.h  codec_impl.h  coding.h  collector.h  collector_top.h  core.h  doc_iterator.h  doclist_compression.h  document.h  document_writer.h  filter.h  func_scope_guard.h  header.h  index_config.h  index_field.h  index_reader.h  index_wrapper.h  index_writer.h  iterator_rocks.h  iterator_wrapper_rocks.h  lockfree_queue.h  logger.h  merge_iterator.h  merger_iterator_rocks.h  or_iterator.h  or_query.h  or_scorer.h  or_weight.h  post_scorer.h  prefix_query.h  prefix_scorer.h  (+33 more)
src/: and_query.cpp  and_scorer.cpp  and_weight.cpp  bool_query.cpp  bool_scorer.cpp  bool_weight.cpp  codec.cpp  codec_doclist_impl.cpp  codec_impl.cpp  coding.cpp  collector.cpp  collector_top.cpp  doc_iterator.cpp  doclist_compression.cpp  document.cpp  document_writer.cpp  index_config.cpp  index_field.cpp  index_wrapper.cpp  index_writer.cpp  logger.cpp  merge_iterator.cpp  merger_iterator_rocks.cpp  or_iterator.cpp  or_query.cpp  or_scorer.cpp  or_weight.cpp  post_scorer.cpp  prefix_query.cpp  prefix_scorer.cpp  prefix_weight.cpp  search_slice.cpp  search_status.cpp  search_util.cpp  searcher.cpp  stat_collector.cpp  staticstic.cpp  tokenizer.cpp  tokenizer_impl.cpp  tokenizer_mmseg.cpp  (+11 more)
unittest/: add_unit.cpp  addorupdate_unit.cpp  boolquery_unit.cpp  db_unit.cpp  delete_unit.cpp  documentwriter_unit.cpp  filter_unit.cpp  indexwriter_unit.cpp  main.cpp  or_and_query_unit.cpp  replace_unit.cpp  searcher_unit.cpp  sort_unit.cpp  tokenize_unit.cpp  ttl_unit.cpp  unittest_util.cpp  unittest_util.h  update_unit.cpp  utils_unit.cpp
